Fixed bug where a smaller screen would have horizontal scroll

--- a/css/home-page-responsive.css
+++ b/css/home-page-responsive.css
@@ -112,12 +112,17 @@
     }
 
     i.icon {
-        width: 50px;
-        margin-right: 30px;
-        height: 50px;
+        margin-right: 20px;
+        margin-top: 32px;
         float: right;
         display: block;
     }
+}
+
+div.title-container {
+    background:
+            linear-gradient(to right, rgba(255, 255, 255, 0.3),
+            rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.3));
 }
 
 /* Only for screens larger than 1023px */
@@ -151,6 +156,12 @@
 
 /* For medium screen smartphones */
 @media screen and (max-width: 1023px) {
+
+    /* HEADER */
+
+    div.title-container {
+        background: rgba(255, 255, 255, 0.6);
+    }
 
     /* MISSION SECTION */
 
@@ -210,7 +221,7 @@
 
     i.icon {
         margin-right: 10px;
-        line-height: 90px;
+        margin-top: 22px;
     }
 
     article.services-article {
@@ -224,7 +235,7 @@
     /* MISSION SECTION */
 
     article.mission-article {
-        width: 90%;
+        max-width: 90%;
     }
 
     /* SERVICES SECTION */
